--- a/GoogleApisSample/GoogleApisSample.csproj
+++ b/GoogleApisSample/GoogleApisSample.csproj
@@ -49,6 +49,7 @@
     <TypeScriptCompile Include="Scripts\typings\jasmine\jasmine.d.ts" />
     <TypeScriptCompile Include="Scripts\typings\jquery\jquery.d.ts" />
     <TypeScriptCompile Include="Scripts\typings\underscore\underscore.d.ts" />
+    <TypeScriptCompile Include="CoursNav.ts" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config">
